add ExceptionUtil.getFirstThrowableAndSuppressOthers